--- a/.github/workflows/deploy-service.yaml
+++ b/.github/workflows/deploy-service.yaml
@@ -13,7 +13,7 @@ on:
 jobs:
   generate-manifests:
     if: github.event.workflow_run.conclusion == 'success'
-    runs-on: [self-hosted, fabric]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
