--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   test-coverage:
-    runs-on: [self-hosted, fabric]
+    runs-on: ubuntu-latest
     if: contains(github.ref, 'tags/*/stmt-') == false
     steps:
       - name: Checkout
