workflow condition for tags

--- a/.github/workflows/artifacts.yaml
+++ b/.github/workflows/artifacts.yaml
@@ -9,6 +9,8 @@ on:
       - 'hotfix/[0-9]+.[0-9]+.[0-9]+/**'
       - main
       - master
+    tags:
+      - v*.*.*
 jobs:
   # These images are created as it is prerequisite for the schema deployment via harness that every service should have an integration test yaml file generated as manifest into fabric-deployments repo
   push-images:
