--- a/.github/workflows/artifacts.yaml
+++ b/.github/workflows/artifacts.yaml
@@ -24,8 +24,7 @@ jobs:
       - name: Check sha
         id: check_sha
         run: |
-          tag=$(git tag --points-at ${{ github.sha }})
-          echo "The git command output is ${{ tag }}"
+          echo "The git command output is ${{git tag --points-at ${{ github.sha }} }}"
           if [[ "$(git tag --points-at ${{ github.sha }})" == v* ]]; then
             echo "::set-output name=is_tagged::true"
           fi
