--- a/.github/workflows/artifacts.yaml
+++ b/.github/workflows/artifacts.yaml
@@ -10,7 +10,7 @@ on:
       - main
       - master
     push:
-      tags: v[1-9]+.[0-9]+.[0-9]+
+      tags: v*.*.*
 
 jobs:
   # These images are created as it is prerequisite for the schema deployment via harness that every service should have an integration test yaml file generated as manifest into fabric-deployments repo
