--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -12,7 +12,7 @@ jobs:
           go-version: '1.13'
       - name: Checkout
         uses: actions/checkout@v2
-      # Fetch all refs and full history for pull request analysis and blame information, respectively
+      # Fetch all refs and full history for pull request analysis and blame information
       - run: git fetch --prune --unshallow
 
       - name: Unit Tests
