--- a/.github/workflows/artifacts.yaml
+++ b/.github/workflows/artifacts.yaml
@@ -5,6 +5,10 @@ on:
       - Testing
     types:
       - completed
+    branches:
+      - 'hotfix/[0-9]+.[0-9]+.[0-9]+/**'
+      - main
+      - master
 
 jobs:
   # These images are created as it is prerequisite for the schema deployment via harness that every service should have an integration test yaml file generated as manifest into fabric-deployments repo
