--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,6 +15,7 @@ jobs:
       - name: Check sha
         id: check_sha
         run: |
+          echo "Tag is: ${GITHUB_REF#refs/*/}"
           if [[ "$(git tag --points-at ${{ github.sha }})" == v* ]]; then
           echo "::set-output name=is_tagged::true"
           fi
