--- a/.github/workflows/artifacts.yaml
+++ b/.github/workflows/artifacts.yaml
@@ -23,6 +23,7 @@ jobs:
       - name: Check sha
         id: check_sha
         run: |
+          echo "Tag is: ${GITHUB_REF#refs/*/}"
           if [[ "$(git tag --points-at ${{ github.sha }})" == v* ]]; then
             echo "::set-output name=is_tagged::true"
           fi
