--- a/.github/workflows/artifacts.yaml
+++ b/.github/workflows/artifacts.yaml
@@ -11,7 +11,7 @@ jobs:
   push-images:
     if: |
       github.event.workflow_run.conclusion == 'success' &&
-      startsWith(github.ref, 'refs/tags/v') == true
+      startsWith(github.ref, 'refs/tags/v') == 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
