--- a/.github/workflows/artifacts.yaml
+++ b/.github/workflows/artifacts.yaml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        if: startsWith(github.ref, 'refs/tags/v') == 'true'
+        if: contains(github.ref, 'refs/tags/v.')
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
@@ -21,7 +21,6 @@ jobs:
         id: check_sha
         run: |
           echo "Tag is: ${GITHUB_REF#refs/*/}"
-          echo "startsWith(github.ref, 'refs/tags/v')"
           if [[ "$(git tag --points-at ${{ github.sha }})" == v* ]]; then
             echo "::set-output name=is_tagged::true"
           fi
