--- a/.github/workflows/artifacts.yaml
+++ b/.github/workflows/artifacts.yaml
@@ -20,7 +20,8 @@ jobs:
       - name: Check sha
         id: check_sha
         run: |
-          echo "Tag is: ${GITHUB_REF#refs/*/}"
+          echo "REF is: ${GITHUB_REF#refs/*/}"
+          echo "SHA is: ${{github.sha}}"
           if [[ "$(git tag --points-at ${{ github.sha }})" == v* ]]; then
             echo "::set-output name=is_tagged::true"
           fi
