--- a/.github/workflows/artifacts.yaml
+++ b/.github/workflows/artifacts.yaml
@@ -7,7 +7,7 @@ on:
       - completed
 
 jobs:
-  # These images are created as it is prerequisite for the schema deployment via harness that every service should have an integration test yaml file generated as manifest into fabric-deployments repo
+  # These images are created as it is prerequisite for the schema deployment via harness that every service should have an integration test yaml file
   push-images:
     if: github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
