--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,8 +5,23 @@ name: Deploy
       - v[0-9].[0-9]+.[0-9]+
 
 jobs:
+  wait-on-checks:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Wait on tests
+        uses: lewagon/wait-on-check-action@master
+        with:
+          ref: ${{ github.ref }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          check-name: 'test-coverage'
+          wait-interval: 10
+
   generate-manifests:
     runs-on: ubuntu-latest
+    needs: wait-on-checks
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
