--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -33,5 +33,5 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test-coverage, bb-test]
     steps:
-      - name: Wait for quality gate
+      - name: Quality Gate
         run: echo "All checks completed"
