--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -30,8 +30,9 @@ jobs:
         shell: bash
 
   quality-gate:
+    name: Quality Gate
     runs-on: ubuntu-latest
     needs: [test-coverage, bb-test]
     steps:
-      - name: Quality Gate
+      - name: complete
         run: echo "All checks completed"
