--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,7 +22,7 @@ jobs:
 
   generate-manifests:
     runs-on: ubuntu-latest
-    needs: wait-on-checks
+    needs: wait-for-check-name
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
