--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -29,14 +29,14 @@ jobs:
         run: sleep 60s
         shell: bash
 
-  quality-gate:
-    name: Quality Gate
-    runs-on: ubuntu-latest
-    steps:
-      - name: Wait for other checks to succeed
-        uses: lewagon/wait-on-check-action@master
-        with:
-          ref: ${{ github.ref }}
-          running-workflow-name: 'Quality Gate'
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          wait-interval: 10
+#  quality-gate:
+#    name: Quality Gate
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Wait for other checks to succeed
+#        uses: lewagon/wait-on-check-action@master
+#        with:
+#          ref: ${{ github.ref }}
+#          running-workflow-name: 'Quality Gate'
+#          repo-token: ${{ secrets.GITHUB_TOKEN }}
+#          wait-interval: 10
