--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,24 +5,24 @@ name: Deploy
       - v[0-9].[0-9]+.[0-9]+
 
 jobs:
-  wait-for-check-name:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Wait on tests
-        uses: lewagon/wait-on-check-action@master
-        with:
-          ref: ${{ github.ref }}
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          check-name:  'Wait for testing'
-          running-workflow-name: wait-for-check-name
-          wait-interval: 10
+#  wait-for-check-name:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v2
+#
+#      - name: Wait on tests
+#        uses: lewagon/wait-on-check-action@master
+#        with:
+#          ref: ${{ github.ref }}
+#          repo-token: ${{ secrets.GITHUB_TOKEN }}
+#          check-name:  'Wait for testing'
+#          running-workflow-name: wait-for-check-name
+#          wait-interval: 10
 
   generate-manifests:
     runs-on: ubuntu-latest
-    needs: wait-for-check-name
+#    needs: wait-for-check-name
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
