--- a/.github/workflows/artifacts.yaml
+++ b/.github/workflows/artifacts.yaml
@@ -37,6 +37,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - id: foo
-        uses: actions/demo-gha-workflow@master
+        uses: ./
         with:
           version: ${GITHUB_REF#refs/*/}
