--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -46,8 +46,8 @@ jobs:
     runs-on: ubuntu-latest
     name: A demo workflow
     steps:
-      - uses: actions/checkout@v2
-      - id: foo
-        uses: actions/demo-gha-workflow@master
+      - uses: actions/checkout@v1
+      - name: Reuse a Step
+        uses: ./.github
         with:
           version: ${GITHUB_REF#refs/*/}
