--- a/.github/workflows/artifacts.yaml
+++ b/.github/workflows/artifacts.yaml
@@ -31,12 +31,7 @@ jobs:
         run: |
           tag=$(git tag --points-at ${{ github.sha }})
           echo "::set-output name=version::${tag##*$'\n'}"
-  demo-reusable-step:
-    runs-on: ubuntu-latest
-    name: Push Images
-    steps:
-      - uses: actions/checkout@v1
-      - name: Reuse a Step
+      - name: Push Image
         uses: ./.github/workflows/common/push-images
         with:
           version: ${GITHUB_REF#refs/*/}
