--- a/.github/workflows/artifacts.yaml
+++ b/.github/workflows/artifacts.yaml
@@ -13,7 +13,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        if: startsWith(github.ref, 'refs/tags/v')
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
@@ -33,5 +32,30 @@ jobs:
           echo "::set-output name=version::${tag##*$'\n'}"
       - name: Push Image
         uses: ./.github/workflows/common/push-images
+        with:
+          version: ${GITHUB_REF#refs/*/}
+
+  flex-templates:
+    if: github.event.workflow_run.conclusion == 'success'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Check sha
+        id: check_sha
+        run: |
+          if [[ "$(git tag --points-at ${{ github.sha }})" == v* ]]; then
+            echo "::set-output name=is_tagged::true"
+          fi
+      - name: Get version
+        if: steps.check_sha.outputs.is_tagged == 'true'
+        id: get_version
+        run: |
+          tag=$(git tag --points-at ${{ github.sha }})
+          echo "::set-output name=version::${tag##*$'\n'}"
+      - name: Build Flex Templates
+        uses: ./.github/workflows/common/flex-template
         with:
           version: ${GITHUB_REF#refs/*/}
