--- a/.github/workflows/artifacts.yaml
+++ b/.github/workflows/artifacts.yaml
@@ -6,7 +6,7 @@ on:
     types:
       - completed
     branches:
-      - 'hotfix/[0-9]+.[0-9]+.[0-9]+/**'
+      - 'hotfix/v[0-9]+.[0-9]+.[0-9]+/**'
       - main
       - master
 
