--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,7 +19,7 @@ jobs:
         with:
           ref: ${{ github.ref }}
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          check-name:  'wait-for-quality-gate'
+          check-name:  'quality-gate'
           running-workflow-name: wait-for-check-name
           wait-interval: 10
 
