--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -29,21 +29,20 @@ jobs:
         run: sleep 30s
         shell: bash
 
-#  quality-gate:
-#    name: Quality Gate
-#    runs-on: ubuntu-latest
-#    needs: [bb-test, test-coverage]
-#    steps:
-#      - name: Wait for checks
-#        run: Echo Waiting for tests
-
-  wait-for-quality-gate:
+  quality-gate:
     runs-on: ubuntu-latest
+    needs: [bb-test, test-coverage]
     steps:
-      - name: Wait for tests to succeed
-        uses: lewagon/wait-on-check-action@master
-        with:
-          ref: ${{ github.ref }}
-          running-workflow-name: wait-for-quality-gate
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          wait-interval: 10
+      - name: Wait for checks
+        run: Echo Waiting for tests
+
+#  wait-for-quality-gate:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Wait for tests to succeed
+#        uses: lewagon/wait-on-check-action@master
+#        with:
+#          ref: ${{ github.ref }}
+#          running-workflow-name: wait-for-quality-gate
+#          repo-token: ${{ secrets.GITHUB_TOKEN }}
+#          wait-interval: 10
