test by adding docker command

--- a/.github/workflows/composite-actions/push-images/action.yaml
+++ b/.github/workflows/composite-actions/push-images/action.yaml
@@ -13,3 +13,6 @@ runs:
       run: |
         echo Version is ${{ inputs.version }}.
         echo "Output of Ref is: ${{github.ref}}"
+    - name: Build Docker image
+      run: |
+        docker build . --tag=demo-app:latest
