replace with make

--- a/.github/workflows/composite-actions/push-images/action.yaml
+++ b/.github/workflows/composite-actions/push-images/action.yaml
@@ -14,5 +14,4 @@ runs:
         echo Version is ${{ inputs.version }}.
         echo "Output of Ref is: ${{github.ref}}"
     - name: Build Docker image
-      run: |
-        docker build . --tag=demo-app:latest
+      run: make app-image
