test checkout repo

--- a/.github/workflows/composite-actions/push-images/action.yaml
+++ b/.github/workflows/composite-actions/push-images/action.yaml
@@ -8,6 +8,11 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Checkout repository
+      shell: bash
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Do Some Job
       shell: bash
       run: |
