add test tag expr

--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -5,7 +5,7 @@ on:
 jobs:
   test-coverage:
     runs-on: ubuntu-latest
-    if: "!contains(github.ref, 'refs/tags/*/docbox')"
+    if: ${{ contains(github.ref, 'refs/tags/*/docbox') == false }}
     steps:
       - uses: actions/setup-go@v2
         with:
@@ -21,11 +21,12 @@ jobs:
         run: |
           echo "Output of Ref is: ${{github.ref}}"
           echo "Output of SHA is: ${{github.sha}}"
+          echo contains(github.ref, 'refs/tags/*/docbox')
           make test
 
   bb-test:
     runs-on: ubuntu-latest
-    if: contains(github.ref, 'refs/tags/*/docbox') == false
+    if: ${{ contains(github.ref, 'refs/tags/*/docbox') == false }}
     steps:
       - name: Sleep for few seconds
         run: sleep 30s
