--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -21,7 +21,7 @@ jobs:
         run: |
           echo "Output of Ref is: ${{github.ref}}"
           echo "Output of SHA is: ${{github.sha}}"
-          echo contains(github.ref, 'refs/tags/*/docbox')
+          echo ${{ contains(github.ref, 'refs/tags/*/docbox') }}
           make test
 
   bb-test:
