--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -4,8 +4,8 @@ on:
 
 jobs:
   test-coverage:
+    if: ${{ !contains(github.ref, 'refs/tags/*/docbox') }}
     runs-on: ubuntu-latest
-    if: ${{ contains(github.ref, 'refs/tags/*/docbox') == false }}
     steps:
       - uses: actions/setup-go@v2
         with:
@@ -21,12 +21,12 @@ jobs:
         run: |
           echo "Output of Ref is: ${{github.ref}}"
           echo "Output of SHA is: ${{github.sha}}"
-          echo ${{ contains(github.ref, 'refs/tags/*/docbox') }}
+          echo ${{ !contains(github.ref, 'refs/tags/*/docbox') }}
           make test
 
   bb-test:
     runs-on: ubuntu-latest
-    if: ${{ contains(github.ref, 'refs/tags/*/docbox') == false }}
+    if: ${{ !contains(github.ref, 'refs/tags/*/docbox') }}
     steps:
       - name: Sleep for few seconds
         run: sleep 30s
