--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -1,8 +1,6 @@
 name: Testing
 on:
   push:
-    tags-ignore:
-      - '*/docbox'
 
 jobs:
   test-coverage:
@@ -25,6 +23,7 @@ jobs:
           echo "Output of SHA is: ${{github.sha}}"
           echo ${{ !startsWith(github.ref, 'refs/tags/*/docbox') }}
           echo ${{ !contains(github.ref, 'docbox') }}
+          echo ${{ github.event.ref != refs/tags/*/docbox }}
           make test
 
   bb-test:
