--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -23,7 +23,7 @@ jobs:
           echo "Output of SHA is: ${{github.sha}}"
           echo ${{ !startsWith(github.ref, 'refs/tags/*/docbox') }}
           echo ${{ !contains(github.ref, 'docbox') }}
-          echo ${{ github.event.ref != 'refs/tags/*/docbox' }}
+          echo ${{ github.event.ref  =~ 'refs/tags/*/docbox' }}
           make test
 
   bb-test:
