--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -22,7 +22,7 @@ jobs:
           echo "Output of Ref is: ${{github.ref}}"
           echo "Output of SHA is: ${{github.sha}}"
           echo ${{ !startsWith(github.ref, 'refs/tags/*/docbox') }}
-          echo ${{ !contains(github.ref, 'docbox') }}
+          echo ${{ !contains('refs/tags/*/docbox', github.ref) }}
           make test
 
   bb-test:
