--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -1,11 +1,14 @@
 name: Testing
 on:
-  push:
+  workflow_run:
+    workflows: ["Init Checks"]
+    types:
+      - completed
 
 jobs:
   test-coverage:
-    if: ${{ !(startsWith(github.ref, 'refs/tags/') && endsWith(github.ref, '/docbox')) }}
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/setup-go@v2
         with:
@@ -24,14 +27,6 @@ jobs:
           echo ${{ !startsWith(github.ref, 'refs/tags/*/docbox') }}
           echo ${{ !contains('refs/tags/*/docbox', github.ref) }}
           make test
-
-  bb-test:
-    runs-on: ubuntu-latest
-    if: ${{ !(startsWith(github.ref, 'refs/tags/') && endsWith(github.ref, '/docbox')) }}
-    steps:
-      - name: Sleep for few seconds
-        run: sleep 30s
-        shell: bash
 
 #  quality-gate:
 #    runs-on: ubuntu-latest
